human-intervention-logs/org.codehaus.plexus:plexus-io:2.0.5/gradle-test/gradle-test-2026-06-07T04-41-50-689162Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.codehaus.plexus:plexus-io:2.0.5
Command: `/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6943-90bafc1e/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6943-90bafc1e/tests/src/org.codehaus.plexus/plexus-io/2.0.5/src/test/java/org_codehaus_plexus/plexus_io/Java7ReflectorTest.java:25: error: cannot find symbol
            Object attributes = Java7Reflector.getPosixFileAttributes(file.toFile());
                                              ^
  symbol:   method getPosixFileAttributes(File)
  location: class Java7Reflector
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6943-90bafc1e/tests/src/org.codehaus.plexus/plexus-io/2.0.5/src/test/java/org_codehaus_plexus/plexus_io/Java7ReflectorTest.java:27: error: cannot find symbol
            assertThat(attributes).isInstanceOf(Java7Reflector.posixFileAttributes);
                                                              ^
  symbol:   variable posixFileAttributes
  location: class Java7Reflector
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6943-90bafc1e/tests/src/org.codehaus.plexus/plexus-io/2.0.5/src/test/java/org_codehaus_plexus/plexus_io/Java7ReflectorTest.java:28: error: cannot find symbol
            assertThat(Java7Reflector.getOwnerUserName(attributes)).isNotBlank();
                                     ^
  symbol:   method getOwnerUserName(Object)
  location: class Java7Reflector
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6943-90bafc1e/tests/src/org.codehaus.plexus/plexus-io/2.0.5/src/test/java/org_codehaus_plexus/plexus_io/Java7ReflectorTest.java:29: error: cannot find symbol
            assertThat(Java7Reflector.getOwnerGroupName(attributes)).isNotBlank();
                                     ^
  symbol:   method getOwnerGroupName(Object)
  location: class Java7Reflector
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6943-90bafc1e/tests/src/org.codehaus.plexus/plexus-io/2.0.5/src/test/java/org_codehaus_plexus/plexus_io/Java7ReflectorTest.java:30: error: cannot find symbol
            assertThat(Java7Reflector.getPermissions(attributes)).hasSize(9);
                                     ^
  symbol:   method getPermissions(Object)
  location: class Java7Reflector
5 errors


[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6943-90bafc1e/tests/src/org.codehaus.plexus/plexus-io/2.0.5/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6943-90bafc1e/tests/src/org.codehaus.plexus/plexus-io/2.0.5/src/test/java/org_codehaus_plexus/plexus_io/Java7ReflectorTest.java:27: error: cannot find symbol
              assertThat(attributes).isInstanceOf(Java7Reflector.posixFileAttributes);
                                                                ^
    symbol:   variable posixFileAttributes
    location: class Java7Reflector
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6943-90bafc1e/tests/src/org.codehaus.plexus/plexus-io/2.0.5/src/test/java/org_codehaus_plexus/plexus_io/Java7ReflectorTest.java:25: error: cannot find symbol
              Object attributes = Java7Reflector.getPosixFileAttributes(file.toFile());
                                                ^
    symbol:   method getPosixFileAttributes(File)
    location: class Java7Reflector
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6943-90bafc1e/tests/src/org.codehaus.plexus/plexus-io/2.0.5/src/test/java/org_codehaus_plexus/plexus_io/Java7ReflectorTest.java:28: error: cannot find symbol
              assertThat(Java7Reflector.getOwnerUserName(attributes)).isNotBlank();
                                       ^
    symbol:   method getOwnerUserName(Object)
    location: class Java7Reflector
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6943-90bafc1e/tests/src/org.codehaus.plexus/plexus-io/2.0.5/src/test/java/org_codehaus_plexus/plexus_io/Java7ReflectorTest.java:29: error: cannot find symbol
              assertThat(Java7Reflector.getOwnerGroupName(attributes)).isNotBlank();
                                       ^
    symbol:   method getOwnerGroupName(Object)
    location: class Java7Reflector
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6943-90bafc1e/tests/src/org.codehaus.plexus/plexus-io/2.0.5/src/test/java/org_codehaus_plexus/plexus_io/Java7ReflectorTest.java:30: error: cannot find symbol
              assertThat(Java7Reflector.getPermissions(attributes)).hasSize(9);
                                       ^
    symbol:   method getPermissions(Object)
    location: class Java7Reflector
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
13 actionable tasks: 5 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6943-90bafc1e/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.codehaus.plexus:plexus-io:2.0.5 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
9 actionable tasks: 1 executed, 8 up-to-date
